# citeMind

./: .gitignore  FRONTEND_UX_REPAIR_PLAN.md  KNOWLEDGE_VALIDATION_REPAIR_PLAN.md  README.md  TODO.md  agent-capability-product-design.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rag-personal-knowledge-base-product-and-architecture.md
worker/: pyproject.toml
worker/src/citemind_worker/: __init__.py  __main__.py  agent_run_service.py  agent_skill_service.py  agent_subagent_service.py  ark_gateway.py  background_job_service.py  citation_validator.py  conversation_service.py  conversation_submit_service.py  indexing_service.py  interfaces.py  knowledge_base_service.py  logging_config.py  main.py  maintenance_service.py  mcp_client_manager.py  model_catalog.py  model_service.py  quality_metrics.py  research_brief_service.py  retrieval_service.py  rpc.py  source_import_service.py  source_organization_service.py  writing_workflow_service.py
worker/tests/: test_agent_run_service.py  test_agent_skill_service.py  test_agent_subagent_service.py  test_ark_gateway.py  test_background_jobs.py  test_conversation_service.py  test_conversation_submit_service.py  test_indexing_service.py  test_knowledge_bases.py  test_logging_config.py  test_maintenance_service.py  test_mcp_external_research.py  test_models.py  test_quality_metrics.py  test_quality_regression.py  test_research_brief_service.py  test_retrieval_service.py  test_rpc.py  test_source_import_service.py  test_source_organization_service.py  test_storage.py  test_writing_workflow_service.py
(+43 files in other folders)
