[project]
name = "citemind-worker"
version = "0.1.0"
description = "citeMind document processing and RAG worker"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jieba>=0.42.1,<0.43",
    "lancedb>=0.29,<0.30",
    "langgraph>=0.6,<1.1",
    "pypdf>=5.0,<6.0",
    "python-docx>=1.1,<2.0",
    "volcengine-python-sdk[ark]>=4.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citemind_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["citemind_worker"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["jieba", "lancedb", "lancedb.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
